# hoplite

./: .gitignore  README.md  init_project.sh
cfg/sample1/: Sample1.setValue.dot
contracts/: sample1.bin-runtime  sample1.sol  sample2.bin-runtime  sample2.sol
go/: go.mod  go.sum  main.go
go/analysis/: analyzer.go
go/tools/: bin_parser.go  converter.go  deploy.go  disassim.go  execute.go  fuzzing.go  verify.go
haskell/: hoplite.cabal  stack.yaml
haskell/.stack-work/: stack.sqlite3
haskell/src/: ContractDSL.hs  Main.hs  ParseSolidity.hs  Parser.hs  Verification.hs
haskell/test/: ProofSample.hs  VerificationTests.hs  VerifySolidity.hs
python/: requirements.txt  setup.py
python/analysis/: shallow_check.py  similarity.py
python/scripts/: cfg.py  contract.py  evaluate_contract.py  orchestrator.py
python/tools/: data_processing.py
python/utils/: big_numbers.py
